# MAT-MINERvA

./: CMakeLists.txt  README.md
bootstrap/: CMakeLists.txt  setup.sh.in  setupROOT6OnGPVMs.sh
buildOSX/: CMakeLists.txt
calculators/: CCInclusiveCuts.h  CCInclusiveSignal.h  CMakeLists.txt  CaloCorrection.cxx  CaloCorrection.h  LowRecoilFunctions.h  LowRecoilPionCuts.h  LowRecoilPionFunctions.h  MuonFunctions.h  RecoilEnergyFunctions.h  WeightFunctions.h
dict/: MAT-MINERvADict.h  MAT-MINERvADict.xml
legacy/: CMakeLists.txt  MnvRecoShifter.cxx
python/: CMakeLists.txt
python/PlotUtils/: CMakeLists.txt  LoadMATMINERvALib.py  __init__.py
style/: CMakeLists.txt  PlotStyle.C
test/: h_1_1d.csv  h_1_bins_1d.csv  h_1_correlation.csv  h_1_covariance.csv  h_1_covdump.csv  h_1_errors_1d.csv  h_1_latdump.csv  h_1_staterrors_1d.csv  h_1_syserrors_1d.csv  h_1_vertdump.csv  h_2.csv  h_2_bins.csv  h_2_correlation.csv  h_2_covariance.csv  h_2_covdump.csv  h_2_errors.csv  h_2_px_1d.csv  h_2_px_bins_1d.csv  h_2_px_correlation.csv  h_2_px_covariance.csv  h_2_px_covdump.csv  h_2_px_errors_1d.csv  h_2_px_staterrors_1d.csv  h_2_px_syserrors_1d.csv  h_2_px_vertdump.csv  h_2_staterrors.csv  h_2_syserrors.csv  h_2_vertdump.csv  python_t.py  python_t.py~  test2_output.root  test_output.root
universes/: AngleSystematics.cxx  AngleSystematics.h  CCQE3DFitsSystematics.cxx  CCQE3DFitsSystematics.h  CMakeLists.txt  CoherentPiSystematics.cxx  CoherentPiSystematics.h  DiffractiveUncSystematics.cxx  DiffractiveUncSystematics.h  GeantHadronSystematics.cxx  GeantHadronSystematics.h  GenericVerticalSystematic.h  GenieSystematics.cxx  GenieSystematics.h  MLVertexSystematics.cxx  MLVertexSystematics.h  MichelSystematics.cxx  MichelSystematics.h  MinervaUniverse.cxx  MinervaUniverse.h  MinosEfficiencySystematics.cxx  MinosEfficiencySystematics.h  MnvTuneSystematics.cxx  MnvTuneSystematics.h  MonaSystematics.h  MuonResolutionSystematics.cxx  MuonResolutionSystematics.h  MuonSystematics.cxx  MuonSystematics.h  RatioOutput_mixtpi_vs_q2_KevinMod.root  Ratio_Vij_mixtpi_vs_q2.root  RecoProtonKECutSystematics.cxx  RecoProtonKECutSystematics.h  ResponseSystematics.cxx  ResponseSystematics.h  TargetMassSystematics.cxx  TargetMassSystematics.h  TrueProtonKECutSystematics.cxx  TrueProtonKECutSystematics.h
utilities/: .LowRecoilPionReco.cxx.swp  .LowRecoilPionReco.h.swp  AnaBinning.cxx  AnaBinning.h  CMakeLists.txt  HistHyperDWrapper.cxx  HistHyperDWrapper.h  HyperDimLinearizer.cxx  HyperDimLinearizer.h  HyperDimLinearizer_v1.cxx  HyperDimLinearizer_v1.h  LowRecoilPionReco.cxx  LowRecoilPionReco.h  MacroUtil.cxx  MacroUtil.h  MakeMacroUtil.h  MnvNormalization.cxx  MnvNormalization.h  NSFDefaults.h  POTCounter.cxx  POTCounter.h  ParticleResponseDefaults.cxx  ParticleResponseDefaults.h  PhysicsVariables.cxx  PhysicsVariables.h  TargetUtils.cxx  TargetUtils.h  VariableHyperDBase.cxx  VariableHyperDBase.h
weighters/: AMUDISReweighter.h  BodekRitchieReweighter.h  CMakeLists.txt  FSIReweighter.h  FitReweighter.h  FluxAndCVReweighter.h  GENIEReweighter.h  GeantNeutronCVReweighter.h  LowQ2PiReweighter.h  LowRecoil2p2hReweighter.h  MINOSEfficiencyReweighter.h  MKReweighter.h  MinosMuonEfficiencyCorrection.cxx  MinosMuonEfficiencyCorrection.h  MnvHadronReweight.cxx  MnvHadronReweight.h  Model.h  NeutronInelasticReweighter.h  PionReweighter.h  RPAReweighter.h  Reweighter.h  SuSAFromValencia2p2hReweighter.h  scale_factors.root  scale_factors1.root  weightCCOnePi.cxx  weightCCOnePi.h  weightCoherentPi.cxx  weightCoherentPi.h  weightDIS.cxx  weightDIS.h  weightGenieBodekRitchieClass.cxx  weightGenieBodekRitchieClass.h  weightLowQ2Pi.cxx  weightLowQ2Pi.h  weightMK.cxx  weightMK.h  weightNuclearScreening.cxx  weightNuclearScreening.h  weightRPA.cxx  weightRPA.h  (+18 more)
